--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,19 +49,19 @@ jobs:
           path: ${{ steps.build-app.outputs.fap-artifacts }}
           if-no-files-found: error
 
-  lint:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    name: Lint sources
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+#  lint:
+#    runs-on: ubuntu-latest
+#    permissions:
+#      contents: read
+#    name: Lint sources
+#    
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
 
-      - name: Lint with ufbt
-        uses: flipperdevices/flipperzero-ufbt-action@v0.1
-        with:
-          sdk-channel: dev
+#      - name: Lint with ufbt
+#        uses: flipperdevices/flipperzero-ufbt-action@v0.1
+#        with:
+#          sdk-channel: dev
           app-dir: sd_spi
           task: lint
